--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,19 @@
+<IfModule mod_rewrite.c>
+        RewriteEngine On
+        RewriteCond %{REQUEST_URI} ^/?\.user\.ini$
+        RewriteRule .* - [F,L,NC]
+</IfModule>
+<IfModule !mod_rewrite.c>
+	<Files ".user.ini">
+	<IfModule mod_authz_core.c>
+		Require all denied
+	</IfModule>
+	<IfModule !mod_authz_core.c>
+		Order deny,allow
+		Deny from all
+	</IfModule>
+	</Files>
+</IfModule>
 # BEGIN WordPress
 # The directives (lines) between "BEGIN WordPress" and "END WordPress" are
 # dynamically generated, and should only be modified via WordPress filters.
@@ -22,18 +38,20 @@ RewriteRule . /index.php [L]
 
 # Wordfence WAF
 <IfModule LiteSpeed>
-	php_value auto_prepend_file '/home/akreev.space/public_html/wordfence-waf.php'
+php_value auto_prepend_file '/home/akreev.space/public_html/wordfence-waf.php'
 </IfModule>
 <IfModule lsapi_module>
-	php_value auto_prepend_file '/home/akreev.space/public_html/wordfence-waf.php'
+php_value auto_prepend_file '/home/akreev.space/public_html/wordfence-waf.php'
 </IfModule>
 <Files ".user.ini">
-	<IfModule mod_authz_core.c>
-		Require all denied
-	</IfModule>
-	<IfModule !mod_authz_core.c>
-		Order deny,allow
-		Deny from all
-	</IfModule>
+<IfModule mod_authz_core.c>
+	Require all denied
+</IfModule>
+<IfModule !mod_authz_core.c>
+	Order deny,allow
+	Deny from all
+</IfModule>
 </Files>
+
 # END Wordfence WAF
+
