fix path and small issues

--- a/wp-content/plugins/freepik-scraper/python/.env-example
+++ b/wp-content/plugins/freepik-scraper/python/.env-example
@@ -1,4 +1,5 @@
 DB_HOST=localhost
-SITE_URL=https://akreev.local
+SITE_URL=https://example.com
 WP_USERNAME=root
 WP_PASSWORD=secret
+COLLECTIONS_URL=https://www.freepik.com/author/AUTHOR/collections
