--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,6 @@ wp-content/ewww/gifsicle.exe
 wp-content/ewww/jpegtran.exe
 wp-content/ewww/optipng.exe
 /wp-content/plugins/freepik-scraper/python/.env
+wp-content/litespeed
+/wp-content/*-cache.php
+wp-content/cache/
