--- a/wp-content/uploads/.htaccess
+++ b/wp-content/uploads/.htaccess
@@ -1,4 +1,109 @@
 
 # BEGIN WebP Express
-# Plugin is deactivated
+# The rules below have been dynamically created by WebP Express in accordance with the plugin settings
+# DO NOT EDIT MANUALLY (unless you are prepared that your changes might be overridden by WebP Express)
+# The following parameters have been in play to produce the rules:
+#
+# WebP Express options:
+# - Operation mode: varied-image-responses
+# - Redirection to existing webp: enabled
+# - Redirection to converter: disabled
+# - Redirection to converter to create missing webp files upon request for the webp: disabled
+# - Destination folder: mingled
+# - Destination extension: set
+# - Destination structure: doc-root
+# - Image types: jpeg, png
+# - Alter HTML enabled?: yes
+#
+# Wordpress/Server configuration:
+# - Document root availablity: Available and its "realpath" is available too. Can be used for structuring cache dir.
+#
+# .htaccess capability test results:
+# - mod_header working?: no
+# - pass variable from .htaccess to script through header working?: no
+# - pass variable from .htaccess to script through environment variable working?: yes
+#
+# Role of the dir that this .htaccess is located in:
+# - Is this .htaccess in a dir containing source images?: yes
+# - Is this .htaccess in a dir containing webp images?: yes
+
+# Rules for handling requests for source images
+# ---------------------------------------------
+
+<IfModule mod_rewrite.c>
+  RewriteEngine On
+
+  # Escape hatch #1: Adding ?dontreplace to an url can be used to bypass redirection
+  RewriteCond %{QUERY_STRING} dontreplace$
+  RewriteCond %{REQUEST_FILENAME} -f
+  RewriteRule . - [L]
+
+  # Escape hatch #2: Placing an empty file in the same folder as the jpeg/png which has same file name, but ".dontreplace" appended will bypass redirection
+  RewriteCond %{REQUEST_FILENAME} (?i)(.*)(\.jpe?g|\.png)$
+  RewriteCond %1%2\.dontreplace -f
+  RewriteRule . - [L]
+
+  # Deprecated escape hatch: Adding ?original to an url can be used to bypass redirection
+  RewriteCond %{QUERY_STRING} original$
+  RewriteCond %{REQUEST_FILENAME} -f
+  RewriteRule . - [L]
+
+  # Deprecated escape hatch: Placing an empty file in the same folder as the jpeg/png which has same file name, but ".do-not-convert" appended will bypass redirection
+  RewriteCond %{REQUEST_FILENAME} (?i)(.*)(\.jpe?g|\.png)$
+  RewriteCond %1%2\.do-not-convert -f
+  RewriteRule . - [L]
+
+  # Avoid redirecting to webp files that are bigger than the original
+  RewriteCond %{REQUEST_FILENAME} -f
+  RewriteCond %{REQUEST_FILENAME} (?i)(/home/akreev.space/public_html/wp-content/uploads/)(.*)(\.jpe?g|\.png)$
+  RewriteCond /home/akreev.space/public_html/wp-content/webp-express/webp-images-bigger-than-source/uploads/%2%3.webp -f
+  RewriteRule . - [L]
+
+  # Redirect to existing converted image in same dir (if browser supports webp)
+  RewriteCond %{HTTP_ACCEPT} image/webp
+  RewriteCond %{REQUEST_URI} (?i)(.*)(\.jpe?g|\.png)$
+  RewriteCond %{DOCUMENT_ROOT}%1\.webp -f
+  RewriteRule (?i)(.*)(\.jpe?g|\.png)$ %1\.webp [T=image/webp,E=EXISTING:1,L]
+
+  # Make sure that browsers which does not support webp also gets the Vary:Accept header
+  # when requesting images that would be redirected to webp on browsers that does.
+  <IfModule mod_headers.c>
+    <FilesMatch "(?i)\.(jpe?g|png)$">
+      Header append "Vary" "Accept"
+    </FilesMatch>
+  </IfModule>
+
+</IfModule>
+
+# Rules for handling requests for webp images
+# ---------------------------------------------
+
+# Set Cache-Control header for requests to webp images
+<IfModule mod_headers.c>
+  <FilesMatch "(?i)\.webp$">
+    Header set Cache-Control "private, max-age=604800"
+  </FilesMatch>
+</IfModule>
+
+# Set Vary:Accept header if we came here by way of our redirect, which set the ADDVARY environment variable
+# The purpose is to make proxies and CDNs aware that the response varies with the Accept header
+<IfModule mod_headers.c>
+  <IfModule mod_setenvif.c>
+    # Apache appends "REDIRECT_" in front of the environment variables defined in mod_rewrite, but LiteSpeed does not
+    # So, the next lines are for Apache, in order to set environment variables without "REDIRECT_"
+    SetEnvIf REDIRECT_EXISTING 1 EXISTING=1
+    SetEnvIf REDIRECT_ADDVARY 1 ADDVARY=1
+
+    Header append "Vary" "Accept" env=ADDVARY
+
+    # Set X-WebP-Express header for diagnose purposes
+    Header set "X-WebP-Express" "Redirected directly to existing webp" env=EXISTING
+  </IfModule>
+</IfModule>
+
+# Register webp mime type 
+<IfModule mod_mime.c>
+  AddType image/webp .webp
+</IfModule>
+
 # END WebP Express
